Fix menu item sizing issue to align with other apps

--- a/app/styles/_variables.scss
+++ b/app/styles/_variables.scss
@@ -12,28 +12,24 @@ $rui-border-color-light:    $gray-lighter;
 $rui-divider-color:         $gray-lightest;
 
 $rui-text-color:            $gray-dark;
-$rui-text-color-muted:      $gray;
 $rui-text-color-disabled:   $gray-light;
-$rui-text-color-light:      #d4d4d4;
+$rui-text-color-muted:      $gray;
 
+$brand-danger:              #f26d63 !default;
+$brand-info:                #5b91cc !default;
 $brand-primary:             #f7931d !default;
 $brand-success:             #a3cf62 !default;
-$brand-info:                #5b91cc !default;
 $brand-warning:             #ffc619 !default;
-$brand-danger:              #f26d63 !default;
 
 $font-family-sans-serif:     "Open Sans", Helvetica, Arial, sans-serif;
+
 $body-bg:                    $gray-base;
 $body-color:                 $rui-text-color;
 $link-color:                 $brand-primary;
 $font-size-root:             14px;
-$font-size-sm:               .9rem;
+$font-size-sm:               .92rem;
 $text-muted:                 $rui-text-color-muted;
 
 // This may get fixed at some point when bs4 stablizes
 $card-border-width:          1px;
 $card-border-radius-inner:   .25rem;
-
-//These are defined in bootstrap but will currently not resolve
-$border-radius-base: 3px;
-$font-size-sm: .85rem;
