--- a/app/styles/components/_rui-dropdown-trigger.sass
+++ b/app/styles/components/_rui-dropdown-trigger.sass
@@ -4,7 +4,7 @@
   width: auto
   height: auto
   line-height: initial
-  color: $rui-text-color-light
+  color: $rui-text-color-muted
 
 .dropup .dropdown-toggle::after
   @extend .angle-up
